[tool.poetry]
name = "check_openweather_api"
version = "0.1.0"
description = "The serverless function that checkes the OpenWeather API"

authors = ["Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>"]
license = "MIT"

packages = [
  { include = "cloudcrier-app/check_openweather_api", from = "../../bases" },
]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
